feat(gh-155): support new apis driven off our index
