# v1beta/rpc.pb.gw.go
@@ -34,6 +34,42 @@ var _ = descriptor.ForMessage
 var _ = metadata.Join
 
 var (
+	filter_LanguageService_List_0 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
+)
+
+func request_LanguageService_List_0(ctx context.Context, marshaler runtime.Marshaler, client LanguageServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq ListRequest
+	var metadata runtime.ServerMetadata
+
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_LanguageService_List_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.List(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_LanguageService_List_0(ctx context.Context, marshaler runtime.Marshaler, server LanguageServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq ListRequest
+	var metadata runtime.ServerMetadata
+
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_LanguageService_List_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.List(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
+var (
 	filter_SourceService_List_0 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
 )
 
@@ -423,6 +459,38 @@ func local_request_TraversalService_GetDependencies_0(ctx context.Context, marsh
 
 }
 
+// RegisterLanguageServiceHandlerServer registers the http handlers for service LanguageService to "mux".
+// UnaryRPC     :call LanguageServiceServer directly.
+// StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
+// Note that using this registration option will cause many gRPC library features to stop working. Consider using RegisterLanguageServiceHandlerFromEndpoint instead.
+func RegisterLanguageServiceHandlerServer(ctx context.Context, mux *runtime.ServeMux, server LanguageServiceServer) error {
+
+	mux.Handle("GET", pattern_LanguageService_List_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_LanguageService_List_0(rctx, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_LanguageService_List_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	return nil
+}
+
 // RegisterSourceServiceHandlerServer registers the http handlers for service SourceService to "mux".
 // UnaryRPC     :call SourceServiceServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -587,6 +655,75 @@ func RegisterTraversalServiceHandlerServer(ctx context.Context, mux *runtime.Ser
 
 	return nil
 }
+
+// RegisterLanguageServiceHandlerFromEndpoint is same as RegisterLanguageServiceHandler but
+// automatically dials to "endpoint" and closes the connection when "ctx" gets done.
+func RegisterLanguageServiceHandlerFromEndpoint(ctx context.Context, mux *runtime.ServeMux, endpoint string, opts []grpc.DialOption) (err error) {
+	conn, err := grpc.Dial(endpoint, opts...)
+	if err != nil {
+		return err
+	}
+	defer func() {
+		if err != nil {
+			if cerr := conn.Close(); cerr != nil {
+				grpclog.Infof("Failed to close conn to %s: %v", endpoint, cerr)
+			}
+			return
+		}
+		go func() {
+			<-ctx.Done()
+			if cerr := conn.Close(); cerr != nil {
+				grpclog.Infof("Failed to close conn to %s: %v", endpoint, cerr)
+			}
+		}()
+	}()
+
+	return RegisterLanguageServiceHandler(ctx, mux, conn)
+}
+
+// RegisterLanguageServiceHandler registers the http handlers for service LanguageService to "mux".
+// The handlers forward requests to the grpc endpoint over "conn".
+func RegisterLanguageServiceHandler(ctx context.Context, mux *runtime.ServeMux, conn *grpc.ClientConn) error {
+	return RegisterLanguageServiceHandlerClient(ctx, mux, NewLanguageServiceClient(conn))
+}
+
+// RegisterLanguageServiceHandlerClient registers the http handlers for service LanguageService
+// to "mux". The handlers forward requests to the grpc endpoint over the given implementation of "LanguageServiceClient".
+// Note: the gRPC framework executes interceptors within the gRPC handler. If the passed in "LanguageServiceClient"
+// doesn't go through the normal gRPC flow (creating a gRPC client etc.) then it will be up to the passed in
+// "LanguageServiceClient" to call the correct interceptors.
+func RegisterLanguageServiceHandlerClient(ctx context.Context, mux *runtime.ServeMux, client LanguageServiceClient) error {
+
+	mux.Handle("GET", pattern_LanguageService_List_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_LanguageService_List_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_LanguageService_List_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	return nil
+}
+
+var (
+	pattern_LanguageService_List_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1beta", "languages"}, "", runtime.AssumeColonVerbOpt(true)))
+)
+
+var (
+	forward_LanguageService_List_0 = runtime.ForwardResponseMessage
+)
 
 // RegisterSourceServiceHandlerFromEndpoint is same as RegisterSourceServiceHandler but
 // automatically dials to "endpoint" and closes the connection when "ctx" gets done.
